  or she wants to use.


### Updated modules for version 5.5.6

* magic.lambda.slots

* magic.lambda.mysql

* magic.lambda.mssql

* magic.lambda.validators

* magic.lambda.io

* magic.lambda.scheduler

* magic.lambda.library

* magic.lambda.io

* Magic itself, especially the _"/files/"_ folder is important to update.



## Version 5.5.7

* Getting authentication setup and crudifier to work with mssql data adapter.



## Version 5.5.8

* Support for filtering the results of the [slots.vocabulary] slot.

* Allowing for configuring appsettings.json if the database connection string is not correct during the setup process.

* Minor bugfixes in the frontend.

* Preventing [unwrap] from trying to evaluate values that are not expressions, to allow for easily evaluate hierarchies of
  "mixed values".

* Created a new slot called [reference] in magic.lambda, that will return a node by reference, as its value, to allow for
  passing around nodes by reference to other slots, etc.

* Created support for "transformers" and "injectors", as an addition to "validators". Transformers will somehow change an existing
  node's value upon POST and PUT, while "injectors" will inject a node without changing an existing node's value.


### Updated modules for version 5.5.8

* magic.lambda.slots

* magic.lambda

* magic - The main project (of course)



## Version 5.5.9

* Much better meta data in _"endpoints.get.hl"_ through the [endpoints.list] slot, allowing us to return much more high quality meta
  information to client, with the intention of allowing for automatically generating frontend grids, editors, etc.

* Support for explicitly stating whether or not crudification process should allow for files being overwritten or not.

* Correctly counting number of endpoints during generation process of HTTP REST endpoints.


### Updated modules for version 5.5.9

* magic.endpoint