@@ -16,7 +16,27 @@ export class EndpointService {
   }
 
   generate(endpoints: any) {
-    return this.httpClient.post<any>(environment.apiURL + 'magic/modules/system/endpoints/generate', endpoints);
+    this.httpClient.post<any>(environment.apiURL + 'magic/modules/system/endpoints/generate', endpoints, {
+        observe: 'response',
+        responseType: 'arraybuffer',
+      }).subscribe(res => {
+
+        // Retrieving the filename, as provided by the server.
+        const disp = res.headers.get('Content-Disposition');
+        let filename = disp.substr(disp.indexOf('=') + 1);
+        filename = filename.substr(1, filename.length - 2);
+        alert(filename);
+
+        // Creating a BLOB URL.
+        const blob = new Blob([res.body], { type: res.headers.get('Content-Type')});
+        const url = window.URL.createObjectURL(blob);
+
+        // To maintain the correct filename, we have to apply this little "hack".
+        const fileLink = document.createElement('a');
+        fileLink.href = url;
+        fileLink.download = filename;
+        fileLink.click();
+      });
   }
 
   executeGet(url: string) {
